[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/mutators/MutatorChooser.gd" type="Script" id=1]

[node name="MutatorChooser" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MutatorName" type="Label" parent="."]
anchor_top = 0.043
anchor_right = 1.0
anchor_bottom = 0.043
margin_bottom = 14.0
text = "Mutator Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MutatorDescription" type="Label" parent="."]
anchor_top = 0.118
anchor_right = 1.0
anchor_bottom = 0.118
margin_bottom = 14.0
text = "Mutator Description"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MutatorImage" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.253
anchor_right = 0.5
anchor_bottom = 0.253
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
